[B]Version 1.1.30[/B]
Added - Thepornfull
Speedporn - subfolder fixes and additions
JavHoHo - fixed