@@ -100,7 +100,7 @@ def Search(url, keyword=None):
 @site.register()
 def Categories(url):
     cathtml = utils.getHtml(url, site.url)
-    match = re.compile(r'<div class="category-wrapper.*?<a href="([^"]+)"\s*?alt="([^"]+)"[^>]+>\s*?<img\s+src=".*?"\s+data-thumb_url="([^"]+)"', re.DOTALL).findall(cathtml)
+    match = re.compile(r'<div class="category-wrapper.*?<a href="([^"]+)"\s*?alt="([^"]+)".*?data-thumb_url="([^"]+)"', re.DOTALL).findall(cathtml)
     for catpage, name, img in match:
         catpage = site.url[:-1] + catpage
         site.add_dir(name, catpage, 'List', img, '')
