@@ -2,3 +2,4 @@
 Added - Thepornfull
 Speedporn - subfolder fixes and additions
 JavHoHo - fixed
+Pornhub - categories fixed
